Bug 927291 - Fix system has no response if sdcard is full during download. r=jduell